tests/paczka2/big_fuzzy/72898816.err
Error in line 6: 5dr3v7 A684 73,7
Error in line 8: gFyX2 A838 66,1
Error in line 19: 8rVNYVEKO A980 75,41
Error in line 24: gFyX2 A684 -1,13
Error in line 13: 8rVNYVEKO A980 79,1
Error in line 31: hlNASkgcY A819 98,9
Error in line 32: 5dr3v7 A684 39,1
Error in line 41: 5dr3v7 A980 2,2
Error in line 50: 5dr3v7 A838 16,9
Error in line 57: 5dr3v7 A980 74,95
Error in line 36: xnSea5j A819 310,1
Error in line 61: 8rVNYVEKO A980 5,4
Error in line 52: hlNASkgcY A838 68,6
Error in line 83: hlNASkgcY A838 -1,4
Error in line 84: A980 A838 48,4
Error in line 85: A980 A980 67,4
Error in line 81: hlNASkgcY A838 11,7
Error in line 93: hlNASkgcY A684 2,5
Error in line 102: A980 A838 16,8
Error in line 114: xnSea5j A838 25,5
Error in line 130: fRNt A838 52,8
Error in line 132: xnSea5j A838 71,4
Error in line 111: A980 A819 7,9
Error in line 139: A980 A838 10,9
Error in line 148: hlNASkgcY A838 18,4
Error in line 150: hlNASkgcY A819 48,8
Error in line 159: hlNASkgcY A838 50,3
Error in line 179: fRNt A684 18,9
Error in line 174: 5dr3v7 A819 68,2
Error in line 186: hlNASkgcY A²80 68,0
Error in line 183: hlNASkgcY A980 72,6
Error in line 185: 5dr3v7 A684 96,7
Error in line 189: 5dr3v7 A980 84,5
Error in line 190: 5dr3v7 A819 137,6
Error in line 198: 5dr3v7 A684 15,4
Error in line 199: 5dr3v7 A838 33,2
Error in line 207: 8rVNYVEKO A819 128,4
Error in line 196: fRNt A819 103,0
Error in line 229: A980 A980 90,9
Error in line 239: A980 A684 71,6
Error in line 241: 8rVNYVEKO A819 50,5
Error in line 243: fRNt A838 22,6
